frontend/src/index.css
@import url("assets/fonts/fonts.css");

@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  :root {
    --background: hsla(0, 0%, 100%, 1);
    --foreground: hsla(0, 0%, 0%, 1);

    --card: 0 0% 100%;
    --card-foreground: 240 10% 3.9%;

    --popover: 0 0% 100%;
    --popover-foreground: 240 10% 3.9%;

    --primary: 240 5.9% 10%;
    --primary-foreground: 0 0% 98%;

    --secondary: 240 4.8% 95.9%;
    --secondary-foreground: 240 5.9% 10%;

    --muted: 240 4.8% 95.9%;
    --muted-foreground: 240 3.8% 46.1%;

    --accent: 240 4.8% 95.9%;
    --accent-foreground: 240 5.9% 10%;

    --destructive: 0 84.2% 60.2%;
    --destructive-foreground: 0 0% 98%;

    --border: 240 5.9% 90%;
    --input: 240 5.9% 90%;
    --ring: 240 10% 3.9%;

    --radius: 1.5rem;

    --g_background: hsla(266, 65%, 13%, 1);
    
    --g_base_gradient_0: linear-gradient(45deg, hsla(267, 65%, 17%, 0.15), hsla(266, 65%, 27%, 1));
    --g_base_gradient_1: linear-gradient(45deg, hsla(266, 65%, 37%, .15), hsl(267, 65%, 37%, 1));

    --g_grey_gradient: linear-gradient(45deg, hsla(0, 0%, 62%, .15), hsl(0, 0%, 60%, 1));

    --g_red_gradient: linear-gradient(45deg, hsla(0, 86%, 70%, .15), hsl(0, 86%, 70%, 1));

    --g_green_gradient: linear-gradient(45deg, hsla(144, 100%, 33%, .44), hsl(144, 100%, 33%, 1));

    --g_light_gradient: linear-gradient(0deg, hsla(0, 0%, 90%, .5), hsl(0, 0%, 90%, 1));
    --g_light_gradient_inactive: linear-gradient(0deg, hsla(0, 0%, 90%, .15), hsl(0, 0%, 90%, .4));

    --g_dark_gradient: linear-gradient(0deg, hsla(0, 0%, 0%, .5), hsla(0, 0%, 0%, 1));
    --g_dark_gradient_inactive: linear-gradient(0deg, hsla(0, 0%, 10%, .15), hsl(0, 0%, 10%, .4));

    --g_planet_gradient: linear-gradient(45deg, hsla(144, 100%, 33%, .1), hsl(144, 100%, 33%, 0.33));

    --g_yellow_gradient: linear-gradient(45deg, hsla(43, 87%, 59%, .4), hsla(43, 87%, 59%, 1));

    --g_yellow: hsla(43, 87%, 59%, 1);
    --g_light: hsla(0, 0%, 90%, .8);
    --g_light_translucent: hsla(0, 0%, 90%, .3);
    --g_dark: hsla(0, 0%, 10%, 1);
    --g_dark_translucent: hsla(0, 0%, 10%, .4);
    --g_cyan: hsla(180, 48%, 50%, 1);
    --g_purple: hsla(299, 51%, 40%, 1);
    --g_brown: hsla(0, 9%, 38%, 1);

    --g_border: 2px solid hsla(0, 0%, 100%, .1);
    --g_shadow: box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.75);
  }

  .dark {
    --background: 240 10% 3.9%;
    --foreground: 0 0% 98%;

    --card: 240 10% 3.9%;
    --card-foreground: 0 0% 98%;

    --popover: 240 10% 3.9%;
    --popover-foreground: 0 0% 98%;

    --primary: 0 0% 98%;
    --primary-foreground: 240 5.9% 10%;

    --secondary: 240 3.7% 15.9%;
    --secondary-foreground: 0 0% 98%;

    --muted: 240 3.7% 15.9%;
    --muted-foreground: 240 5% 64.9%;

    --accent: 240 3.7% 15.9%;
    --accent-foreground: 0 0% 98%;

    --destructive: 0 62.8% 30.6%;
    --destructive-foreground: 0 0% 98%;

    --border: 240 3.7% 15.9%;
    --input: 240 3.7% 15.9%;
    --ring: 240 4.9% 83.9%;
  }
}
@layer base {
  * {
    @apply border-g_border;
  }
  body {
    @apply bg-g_background text-g_light;
  }

  h1, h2, h3, h4, h5 {
    @apply font-headline font-bold text-g_light;
  }

  h1 {
    @apply text-4xl;
  }

  h2 {
    @apply text-3xl;
  }

  h3 {
    @apply text-2xl;
  }

  h4 {
    @apply text-xl;
  }

  p, a, span, td {
    @apply font-main text-g_light;
  }
}

